RESOLVED FIXED155680
ES6 spec requires that ErrorPrototype not be an Error object.
https://bugs.webkit.org/show_bug.cgi?id=155680
Summary ES6 spec requires that ErrorPrototype not be an Error object.
Mark Lam
Reported 2016-03-19 00:03:58 PDT
The ES6 spec states that Error.prototype should not be an instance of Error: https://tc39.github.io/ecma262/#sec-properties-of-the-error-prototype-object "The Error prototype object is an ordinary object. It is not an Error instance and does not have an [[ErrorData]] internal slot."
Attachments
proposed patch. (15.60 KB, patch)
2016-03-19 00:12 PDT, Mark Lam
msaboff: review+
Radar WebKit Bug Importer
Comment 1 2016-03-19 00:04:36 PDT
Mark Lam
Comment 2 2016-03-19 00:12:50 PDT
Created attachment 274510 [details] proposed patch.
Michael Saboff
Comment 3 2016-03-19 08:46:00 PDT
Comment on attachment 274510 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=274510&action=review r=me > Source/JavaScriptCore/ChangeLog:14 > + This patch changes ErrorPrototype to conform to the above specification. Include that you changed NativeErrorPrototype. > LayoutTests/ChangeLog:8 > + Rebase all the test results. Add a comment that you changed some tests as well.
Mark Lam
Comment 4 2016-03-19 11:14:43 PDT
Thanks for the review. I've added the requested comments. Landed in r198469: <http://trac.webkit.org/r198469>.
Note You need to log in before you can comment on or make changes to this bug.