ES6 spec requires that ErrorPrototype not be an Error object. https://bugs.webkit.org/show_bug.cgi?id=155680

Reviewed by Michael Saboff.

Source/JavaScriptCore:

The ES6 spec states that Error.prototype should not be an instance of Error:
https://tc39.github.io/ecma262/#sec-properties-of-the-error-prototype-object

"The Error prototype object is an ordinary object. It is not an Error instance
and does not have an [[ErrorData]] internal slot."

This patch changes ErrorPrototype to conform to the above specification.

* runtime/ErrorConstructor.cpp:
(JSC::ErrorConstructor::finishCreation):
* runtime/ErrorPrototype.cpp:
(JSC::ErrorPrototype::ErrorPrototype):
(JSC::ErrorPrototype::finishCreation):
(JSC::ErrorPrototype::getOwnPropertySlot):
* runtime/ErrorPrototype.h:
(JSC::ErrorPrototype::create):

* runtime/NativeErrorConstructor.cpp:
(JSC::NativeErrorConstructor::finishCreation):
* runtime/NativeErrorPrototype.cpp:
(JSC::NativeErrorPrototype::NativeErrorPrototype):
(JSC::NativeErrorPrototype::finishCreation):
* runtime/NativeErrorPrototype.h:
(JSC::NativeErrorPrototype::create):
- updated to no longer need a JSGlobalObject argument.

* tests/es6/miscellaneous_built-in_prototypes_are_not_instances.js:
- updated to match the kangax version of this test.

LayoutTests:

Updated the appropriate tests to expect the toString() value of Error.prototype
to now be "[object Object]" instead of "[object Error]".  Also rebased the test
results accordingly.

* fast/dom/DOMException/prototype-object-expected.txt:
* fast/dom/DOMException/prototype-object.html:
* js/dom/native-error-prototype-expected.txt:
* js/dom/script-tests/native-error-prototype.js:
* sputnik/Conformance/15_Native_Objects/15.11_Error/15.11.4/S15.11.4_A2.html:



Canonical link: https://commits.webkit.org/173797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198469 268f45cc-cd09-0410-ab3c-d52691b4dbfc