Source/JavaScriptCore/runtime/NativeErrorPrototype.cpp
@@ -1,6 +1,6 @@
 /*
  *  Copyright (C) 1999-2000 Harri Porten (porten@kde.org)
- *  Copyright (C) 2003, 2008 Apple Inc. All rights reserved.
+ *  Copyright (C) 2003, 2008, 2016 Apple Inc. All rights reserved.
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
@@ -33,9 +33,9 @@ NativeErrorPrototype::NativeErrorPrototype(VM& vm, Structure* structure)
 {
 }
 
-void NativeErrorPrototype::finishCreation(VM& vm, JSGlobalObject* globalObject, const WTF::String& nameAndMessage, NativeErrorConstructor* constructor)
+void NativeErrorPrototype::finishCreation(VM& vm, const WTF::String& nameAndMessage, NativeErrorConstructor* constructor)
 {
-    Base::finishCreation(vm, globalObject);
+    Base::finishCreation(vm);
     putDirect(vm, vm.propertyNames->name, jsString(&vm, nameAndMessage), DontEnum);
     putDirect(vm, vm.propertyNames->message, jsEmptyString(&vm), DontEnum);
     putDirect(vm, vm.propertyNames->constructor, constructor, DontEnum);
