Source/JavaScriptCore/tests/es6/miscellaneous_built-in_prototypes_are_not_instances.js
@@ -6,6 +6,13 @@ try {
 try {
   Date.prototype.valueOf(); return false;
 } catch(e) {}
+
+if (![Error, EvalError, RangeError, ReferenceError, SyntaxError, TypeError, URIError].every(function (E) {
+    return Object.prototype.toString.call(E.prototype) === '[object Object]';
+})) {
+  return false;
+}
+
 return true;
       
 }
